2/y.output
Grammar

    0 $accept: Toml $end

    1 Toml: TITLE '=' Aspas NEWLINE2 Blocos

    2 Blocos: Blocos NEWLINE2 Bloco
    3       | %empty

    4 Bloco: TagBloco NEWLINE ElsBloco NEWLINE2

    5 ElsBloco: ElsBloco NEWLINE ElemBloco
    6         | ElemBloco

    7 ElemBloco: ChaveValor
    8          | Bloco

    9 TagBloco: '[' CHAVE ']'

   10 ChaveValor: CHAVE '=' Valor

   11 Valor: Aspas
   12      | VALOR
   13      | Array

   14 Array: '[' ElsArray ']'
   15      | '[' ']'

   16 ElsArray: ElsArray ',' Valor
   17         | Valor

   18 Aspas: '"' STRING '"'


Terminals, with rules where they appear

$end (0) 0
'"' (34) 18
',' (44) 16
'=' (61) 1 10
'[' (91) 9 14 15
']' (93) 9 14 15
error (256)
TITLE (258) 1
VALOR (259) 12
CHAVE (260) 9 10
STRING (261) 18
NEWLINE (262) 4 5
NEWLINE2 (263) 1 2 4


Nonterminals, with rules where they appear

$accept (14)
    on left: 0
Toml (15)
    on left: 1, on right: 0
Blocos (16)
    on left: 2 3, on right: 1 2
Bloco (17)
    on left: 4, on right: 2 8
ElsBloco (18)
    on left: 5 6, on right: 4 5
ElemBloco (19)
    on left: 7 8, on right: 5 6
TagBloco (20)
    on left: 9, on right: 4
ChaveValor (21)
    on left: 10, on right: 7
Valor (22)
    on left: 11 12 13, on right: 10 16 17
Array (23)
    on left: 14 15, on right: 13
ElsArray (24)
    on left: 16 17, on right: 14 16
Aspas (25)
    on left: 18, on right: 1 11


State 0

    0 $accept: . Toml $end

    TITLE  shift, and go to state 1

    Toml  go to state 2


State 1

    1 Toml: TITLE . '=' Aspas NEWLINE2 Blocos

    '='  shift, and go to state 3


State 2

    0 $accept: Toml . $end

    $end  shift, and go to state 4


State 3

    1 Toml: TITLE '=' . Aspas NEWLINE2 Blocos

    '"'  shift, and go to state 5

    Aspas  go to state 6


State 4

    0 $accept: Toml $end .

    $default  accept


State 5

   18 Aspas: '"' . STRING '"'

    STRING  shift, and go to state 7


State 6

    1 Toml: TITLE '=' Aspas . NEWLINE2 Blocos

    NEWLINE2  shift, and go to state 8


State 7

   18 Aspas: '"' STRING . '"'

    '"'  shift, and go to state 9


State 8

    1 Toml: TITLE '=' Aspas NEWLINE2 . Blocos

    $default  reduce using rule 3 (Blocos)

    Blocos  go to state 10


State 9

   18 Aspas: '"' STRING '"' .

    $default  reduce using rule 18 (Aspas)


State 10

    1 Toml: TITLE '=' Aspas NEWLINE2 Blocos .
    2 Blocos: Blocos . NEWLINE2 Bloco

    NEWLINE2  shift, and go to state 11

    $default  reduce using rule 1 (Toml)


State 11

    2 Blocos: Blocos NEWLINE2 . Bloco

    '['  shift, and go to state 12

    Bloco     go to state 13
    TagBloco  go to state 14


State 12

    9 TagBloco: '[' . CHAVE ']'

    CHAVE  shift, and go to state 15


State 13

    2 Blocos: Blocos NEWLINE2 Bloco .

    $default  reduce using rule 2 (Blocos)


State 14

    4 Bloco: TagBloco . NEWLINE ElsBloco NEWLINE2

    NEWLINE  shift, and go to state 16


State 15

    9 TagBloco: '[' CHAVE . ']'

    ']'  shift, and go to state 17


State 16

    4 Bloco: TagBloco NEWLINE . ElsBloco NEWLINE2

    CHAVE  shift, and go to state 18
    '['    shift, and go to state 12

    Bloco       go to state 19
    ElsBloco    go to state 20
    ElemBloco   go to state 21
    TagBloco    go to state 14
    ChaveValor  go to state 22


State 17

    9 TagBloco: '[' CHAVE ']' .

    $default  reduce using rule 9 (TagBloco)


State 18

   10 ChaveValor: CHAVE . '=' Valor

    '='  shift, and go to state 23


State 19

    8 ElemBloco: Bloco .

    $default  reduce using rule 8 (ElemBloco)


State 20

    4 Bloco: TagBloco NEWLINE ElsBloco . NEWLINE2
    5 ElsBloco: ElsBloco . NEWLINE ElemBloco

    NEWLINE   shift, and go to state 24
    NEWLINE2  shift, and go to state 25


State 21

    6 ElsBloco: ElemBloco .

    $default  reduce using rule 6 (ElsBloco)


State 22

    7 ElemBloco: ChaveValor .

    $default  reduce using rule 7 (ElemBloco)


State 23

   10 ChaveValor: CHAVE '=' . Valor

    VALOR  shift, and go to state 26
    '['    shift, and go to state 27
    '"'    shift, and go to state 5

    Valor  go to state 28
    Array  go to state 29
    Aspas  go to state 30


State 24

    5 ElsBloco: ElsBloco NEWLINE . ElemBloco

    CHAVE  shift, and go to state 18
    '['    shift, and go to state 12

    Bloco       go to state 19
    ElemBloco   go to state 31
    TagBloco    go to state 14
    ChaveValor  go to state 22


State 25

    4 Bloco: TagBloco NEWLINE ElsBloco NEWLINE2 .

    $default  reduce using rule 4 (Bloco)


State 26

   12 Valor: VALOR .

    $default  reduce using rule 12 (Valor)


State 27

   14 Array: '[' . ElsArray ']'
   15      | '[' . ']'

    VALOR  shift, and go to state 26
    '['    shift, and go to state 27
    ']'    shift, and go to state 32
    '"'    shift, and go to state 5

    Valor     go to state 33
    Array     go to state 29
    ElsArray  go to state 34
    Aspas     go to state 30


State 28

   10 ChaveValor: CHAVE '=' Valor .

    $default  reduce using rule 10 (ChaveValor)


State 29

   13 Valor: Array .

    $default  reduce using rule 13 (Valor)


State 30

   11 Valor: Aspas .

    $default  reduce using rule 11 (Valor)


State 31

    5 ElsBloco: ElsBloco NEWLINE ElemBloco .

    $default  reduce using rule 5 (ElsBloco)


State 32

   15 Array: '[' ']' .

    $default  reduce using rule 15 (Array)


State 33

   17 ElsArray: Valor .

    $default  reduce using rule 17 (ElsArray)


State 34

   14 Array: '[' ElsArray . ']'
   16 ElsArray: ElsArray . ',' Valor

    ']'  shift, and go to state 35
    ','  shift, and go to state 36


State 35

   14 Array: '[' ElsArray ']' .

    $default  reduce using rule 14 (Array)


State 36

   16 ElsArray: ElsArray ',' . Valor

    VALOR  shift, and go to state 26
    '['    shift, and go to state 27
    '"'    shift, and go to state 5

    Valor  go to state 37
    Array  go to state 29
    Aspas  go to state 30


State 37

   16 ElsArray: ElsArray ',' Valor .

    $default  reduce using rule 16 (ElsArray)
